Style Card Content

--- a/Project-I-Social-Card/social-card/src/components/HeaderComponents/Header.css
+++ b/Project-I-Social-Card/social-card/src/components/HeaderComponents/Header.css
@@ -1,6 +1,7 @@
 /* All styles for your header Components live here */
 header {
   display: flex;
+  margin-right: 15px;
 }
 
 /* Header Image Thumbnail Styles */
