--- a/Project-I-Social-Card/social-card/src/components/CardComponents/Card.css
+++ b/Project-I-Social-Card/social-card/src/components/CardComponents/Card.css
@@ -1,1 +1,30 @@
 /* All styles for your Card Components live here */
+.card-body-container {
+  max-width: 520px;
+  margin-left: auto;
+  margin-right: 15px;
+  border: 1px solid rgba(0,0,0,0.1);
+  border-radius: 5px;
+}
+
+.card-body-content img {
+  width: 100%;
+  border-radius: 5px 5px 0 0;
+}
+
+/* Card Content Styles  */
+.card-content {
+  padding: 15px;
+}
+
+.card-content p {
+  line-height: 30px;
+}
+
+p.card-content-body-text {
+  line-height: 20px;
+}
+
+.card-content-title {
+  font-weight: bold;
+}
